--- a/public/css/app.css
+++ b/public/css/app.css
@@ -792,92 +792,20 @@ select {
 .w-auto {
   width: auto;
 }
-.w-1n2 {
-    width: 50%;
-}
-.w-1n3 {
-    width: 33.333333%;
-}
-.w-2n3 {
-    width: 66.666667%;
-}
-.w-1n4 {
-    width: 25%;
-}
-.w-2n4 {
-    width: 50%;
-}
-.w-3n4 {
-    width: 75%;
-}
-.w-1n5 {
-    width: 20%;
-}
-.w-2n5 {
-    width: 40%;
-}
-.w-3n5 {
-    width: 60%;
-}
-.w-4n5 {
-    width: 80%;
-}
-.w-1n6 {
-    width: 16.666667%;
-}
-.w-2n6 {
-    width: 33.333333%;
-}
-.w-3n6 {
-    width: 50%;
-}
-.w-4n6 {
-    width: 66.666667%;
-}
-.w-5n6 {
-    width: 83.333333%;
-}
-.w-1n12 {
-    width: 8.333333%;
-}
-.w-2n12 {
-    width: 16.666667%;
-}
-.w-3n12	{
-    width: 25%;
-}
-.w-4n12	{
-    width: 33.333333%;
-}
-.w-5n12	{
-    width: 41.666667%;
-}
-.w-6n12	{
-    width: 50%;
-}
-.w-7n12	{
-    width: 58.333333%;
-}
-.w-8n12	{
-    width: 66.666667%;
-}
-.w-9n12	{
-    width: 75%;
-}
-.w-10n12 {
-    width: 83.333333%;
-}
-.w-11n12 {
-    width: 91.666667%;
-}
 .w-full {
   width: 100%;
+}
+.w-1\/4 {
+  width: 25%;
 }
 .max-w-6xl {
   max-width: 72rem;
 }
 .max-w-7xl {
   max-width: 80rem;
+}
+.max-w-xl {
+  max-width: 36rem;
 }
 .flex-1 {
   flex: 1 1 0%;
@@ -967,6 +895,9 @@ select {
 .border {
   border-width: 1px;
 }
+.border-2 {
+  border-width: 2px;
+}
 .border-b {
   border-bottom-width: 1px;
 }
@@ -975,6 +906,9 @@ select {
 }
 .border-l-4 {
   border-left-width: 4px;
+}
+.border-r {
+  border-right-width: 1px;
 }
 .border-t {
   border-top-width: 1px;
@@ -990,6 +924,10 @@ select {
 .border-gray-300 {
   --tw-border-opacity: 1;
   border-color: rgb(209 213 219 / var(--tw-border-opacity));
+}
+.border-gray-400 {
+  --tw-border-opacity: 1;
+  border-color: rgb(156 163 175 / var(--tw-border-opacity));
 }
 .border-indigo-400 {
   --tw-border-opacity: 1;
@@ -1010,12 +948,13 @@ select {
   --tw-bg-opacity: 1;
   background-color: rgb(238 242 255 / var(--tw-bg-opacity));
 }
+.bg-red-300 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(252 165 165 / var(--tw-bg-opacity));
+}
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-}
-.bg-red-300	{
-    background-color: rgb(252 165 165);
 }
 .fill-current {
   fill: currentColor;
@@ -1132,6 +1071,9 @@ select {
 }
 .leading-tight {
   line-height: 1.25;
+}
+.tracking-wider {
+  letter-spacing: 0.05em;
 }
 .tracking-widest {
   letter-spacing: 0.1em;
